log
Fri 25 Aug 2023 07:41:55 PM UTC: 
 tests:  0|6
total_score: 0/70
989907c
Sat 26 Aug 2023 12:36:37 AM UTC: 
 list.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:3: error: unknown type name ‘list’; did you mean ‘List’?
   33 |   list* nuevaLista=(List*)malloc(sizeof(List));
      |   ^~~~
      |   List
list.c:33:20: error: initialization of ‘int *’ from incompatible pointer type ‘List *’ {aka ‘struct List *’} [-Werror=incompatible-pointer-types]
   33 |   list* nuevaLista=(List*)malloc(sizeof(List));
      |                    ^
list.c:38:13: error: request for member ‘head’ in something not a structure or union
   38 |   nuevaLista->head=NULL;
      |             ^~
list.c:39:10: error: returning ‘int *’ from a function with incompatible return type ‘List *’ {aka ‘struct List *’} [-Werror=incompatible-pointer-types]
   39 |   return nuevaLista;
      |          ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f9cd910
Sat 26 Aug 2023 12:41:53 AM UTC: 
 list.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:3: error: unknown type name ‘list’; did you mean ‘List’?
   32 |   list* nuevaLista=(List*)malloc(sizeof(List));
      |   ^~~~
      |   List
list.c:32:20: error: initialization of ‘int *’ from incompatible pointer type ‘List *’ {aka ‘struct List *’} [-Werror=incompatible-pointer-types]
   32 |   list* nuevaLista=(List*)malloc(sizeof(List));
      |                    ^
list.c:37:13: error: request for member ‘head’ in something not a structure or union
   37 |   nuevaLista->head=NULL;
      |             ^~
list.c:38:10: error: returning ‘int *’ from a function with incompatible return type ‘List *’ {aka ‘struct List *’} [-Werror=incompatible-pointer-types]
   38 |   return nuevaLista;
      |          ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c753140
Sat 26 Aug 2023 01:26:52 AM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:3: error: unknown type name ‘list’; did you mean ‘List’?
   32 |   list* nuevaLista=(List*)malloc(sizeof(List));
      |   ^~~~
      |   List
list.c:32:20: error: initialization of ‘int *’ from incompatible pointer type ‘List *’ {aka ‘struct List *’} [-Werror=incompatible-pointer-types]
   32 |   list* nuevaLista=(List*)malloc(sizeof(List));
      |                    ^
list.c:37:13: error: request for member ‘head’ in something not a structure or union
   37 |   nuevaLista->head=NULL;
      |             ^~
list.c:38:10: error: returning ‘int *’ from a function with incompatible return type ‘List *’ {aka ‘struct List *’} [-Werror=incompatible-pointer-types]
   38 |   return nuevaLista;
      |          ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
81a2d07
Sat 26 Aug 2023 01:54:52 AM UTC: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:3: error: unknown type name ‘list’; did you mean ‘List’?
   32 |   list* nuevaLista=(List*)malloc(sizeof(List));
      |   ^~~~
      |   List
list.c:32:20: error: initialization of ‘int *’ from incompatible pointer type ‘List *’ {aka ‘struct List *’} [-Werror=incompatible-pointer-types]
   32 |   list* nuevaLista=(List*)malloc(sizeof(List));
      |                    ^
list.c:37:17: error: request for member ‘head’ in something not a structure or union
   37 |       nuevaLista->head=NULL;
      |                 ^~
list.c:38:17: error: request for member ‘tail’ in something not a structure or union
   38 |       nuevaLista->tail=NULL;
      |                 ^~
list.c:39:17: error: request for member ‘current’ in something not a structure or union
   39 |       nuevaLista->current=NULL;
      |                 ^~
list.c:41:10: error: returning ‘int *’ from a function with incompatible return type ‘List *’ {aka ‘struct List *’} [-Werror=incompatible-pointer-types]
   41 |   return nuevaLista;
      |          ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ff54394
